--- a/source/blog/posts/2018-05-17_genesis.md
+++ b/source/blog/posts/2018-05-17_genesis.md
@@ -1,3 +1,4 @@
+# Genesis
 Welcome to the first post of this blog. I don't actually know what
 I will be writing about yet. This site is also under construction.
 Here have an imaginary cookie.
