Created a templating system with pandoc

--- a/source/blog/posts/2018-05-17_genesis.md
+++ b/source/blog/posts/2018-05-17_genesis.md
@@ -1,4 +1,10 @@
-# Genesis
+
+---
+title: Genesis
+author: zamlz
+date: 2018-05-17
+---
+
 Welcome to the first post of this blog. I don't actually know what
 I will be writing about yet. This site is also under construction.
 Here have an imaginary cookie.
