Added a little script to create a minimal http server

--- a/source/blog/posts/2018-05-17_genesis.md
+++ b/source/blog/posts/2018-05-17_genesis.md
@@ -5,7 +5,7 @@ author: zamlz
 date: 2018-05-17
 css:
 - https://fonts.googleapis.com/css?family=EB Garmond
-- ../../../style.css
+- /style.css
 ---
 
 Welcome to the first post of this blog. I don't actually know what
