--- a/source/blog/posts/2018-05-17_genesis.md
+++ b/source/blog/posts/2018-05-17_genesis.md
@@ -3,9 +3,7 @@
 title: Genesis
 author: zamlz
 date: 2018-05-17
-css:
-- https://fonts.googleapis.com/css?family=EB Garmond
-- /style.css
+css: /style.css
 ---
 
 Welcome to the first post of this blog. I don't actually know what
