Changed my websites theme

--- a/source/blog/posts/2018-05-17_genesis.md
+++ b/source/blog/posts/2018-05-17_genesis.md
@@ -1,9 +1,11 @@
 
 ---
 title: Genesis
-author: zamlz
-date: 2018-05-17
-css: /style.css
+author: Amlesh Sivanantham
+date: May 5, 2018
+css:
+  - "https://fonts.googleapis.com/css?family=EB+Garamond"
+  - "/style.css"
 ---
 
 Welcome to the first post of this blog. I don't actually know what
