Major CSS rework

--- a/source/blog/posts/2018-05-17_genesis.md
+++ b/source/blog/posts/2018-05-17_genesis.md
@@ -4,8 +4,7 @@ title: Genesis
 author: Amlesh Sivanantham
 date: May 5, 2018
 css:
-  - "/style.css"
-  - "https://fonts.googleapis.com/css?family=EB+Garamond"
+  - "/styles/main.css"
 ---
 
 Welcome to the first post of this blog. I don't actually know what
