--- a/source/main/index.org
+++ b/source/main/index.org
@@ -1,5 +1,6 @@
 #+TITLE: Amlesh Sivanantham
 #+SUBTITLE: Computer Scientist | Software Engineer
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="/resources/profile.css" />
 
 [[./data/profile.png]]
 
